# treasure-master-hack

bruteforce/: .clang-format  CMakeLists.txt
bruteforce/common/: CMakeLists.txt  alignment.h  rng.cpp  rng.h  tester.h
bruteforce/tm_128_16_test/: main.cpp  tm_128_16.cpp  tm_128_16.h  tm_128_16_test.cpp  tm_128_16_test.h
bruteforce/tm_128_8_test/: main.cpp  tm_128_8.cpp  tm_128_8.h  tm_128_8_test.cpp  tm_128_8_test.h
bruteforce/tm_32_16_test/: main.cpp  tm_32_16.cpp  tm_32_16.h  tm_32_16_test.cpp  tm_32_16_test.h
bruteforce/tm_32_8_test/: main.cpp  tm_32_8.cpp  tm_32_8.h  tm_32_8_test.cpp  tm_32_8_test.h
bruteforce/tm_64_16_test/: main.cpp  tm_64_16.cpp  tm_64_16.h  tm_64_16_test.cpp  tm_64_16_test.h
bruteforce/tm_64_8_test/: main.cpp  tm_64_8.cpp  tm_64_8.h  tm_64_8_test.cpp  tm_64_8_test.h
bruteforce/tm_8_test/: CMakeLists.txt  generate_test_cases.cpp  main.cpp  tm_8.cpp  tm_8.h  tm_8_test.cpp  tm_8_test.h
bruteforce/tm_avx2_test/: CMakeLists.txt  main.cpp  tm_avx2.cpp  tm_avx2.h  tm_avx2_test.cpp  tm_avx2_test.h
bruteforce/tm_avx512_test/: CMakeLists.txt  main.cpp  tm_avx512.cpp  tm_avx512.h  tm_avx512_test.cpp  tm_avx512_test.h
bruteforce/tm_avx_16_test/: main.cpp  tm_avx_16.cpp  tm_avx_16.h  tm_avx_16_test.cpp  tm_avx_16_test.h
bruteforce/tm_avx_8_test/: main.cpp  tm_avx_8.cpp  tm_avx_8.h  tm_avx_8_test.cpp  tm_avx_8_test.h
bruteforce/tm_avx_full/: key_schedule.h  main.cpp  tm_avx_full.h
bruteforce/tm_avx_in_cpu_test/: main.cpp  tm_avx_in_cpu.cpp  tm_avx_in_cpu.h  tm_avx_in_cpu_test.cpp  tm_avx_in_cpu_test.h
bruteforce/tm_mpi/: main.cpp  (+6 more)
(+30 files in other folders)
